--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
         <title>Empty project</title>
         <meta charset="utf-8">
     </head>
-    <body  class="min-h-screen flex items-center justify-center bg-blue-500 text-6xl text-yellow-500">
+    <body  class="min-h-screen flex items-center justify-center bg-red-400 text-6xl text-yellow-500">
         <div id="app">what up b </div>
         <script src="index.js"></script>
     </body>
